# md_numbering_tool

./: .gitignore  README.md  fix_code_blocks.py  main.py  pyproject.toml  simple_example.md
input/: sample.md
input/250720 fal/01. fal/: 01.1 Introduction  fal.ai Docs  fal.ai Docs.md  01.2 Quickstart with fal  fal.ai Docs  fal.ai Docs.md
input/250720 fal/02. Models/: flux-pro_v1.1-ultra.json  flux-pro_v1.1-ultra.md  flux1_kontext_dev.md  flux1_kontext_max_editing.json  flux1_kontext_max_editing.md  flux1_kontext_max_multi-img.json  flux1_kontext_max_multi-img.md  flux1_kontext_max_txt-_img.json  flux1_kontext_max_txt-_img.md  flux1_kontext_trainer.json  flux1_kontext_trainer.md  gpt-Image-1.md  gpt-image-1.json  hailou2.json  hailou2.md  imagen4.json  imagen4.md  kling2.1.json  kling2.1.md  seedance1.json  seedance1.md  seedance1lite.json  seedance1lite.md  seedream3.json  seedream3.md  topaz video upscale.json  topaz video upscale.md  veo3.json  veo3.md
input/Imagen/: getting-started.md  overview.md
input/Imagen/guides/: prompt-attributes.md  upscaling.md  watermark-verification.md
input/Imagen/integrations/: base64-encoding.md  gemini-integration.md
input/Imagen/parameters/: aspect-ratio.md  deterministic-generation.md  negative-prompts.md  prompt-language.md  prompt-rewriter.md  responsible-ai.md
output_fixed/01. fal/: 01.2 Quickstart with fal  fal.ai Docs  fal.ai Docs.md
output_fixed/01. fal/01.13 Errors/: Error Reference  fal.ai Docs  fal.ai Docs.md
src/markdown_numberer/: __init__.py
src/markdown_numberer/core/: __init__.py  config.py  logging.py  (+3 more)
(+34 files in other folders)
